--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -26,3 +26,15 @@ $event-hover-state: $brainflix-darkblue;
 $form-field-outline: $mercury;
 $form-field-background: $alabaster;
 $form-field-outline-error: $red;
+
+//padding 
+$mobile-before-headline: 1.5rem;
+$mobile-after-headline: 1rem;
+$mobile-between-component: 1rem;
+
+$tablet-before-headline: 2.25rem;
+$tablet-after-headline: 1.5rem;
+$tablet-between-component: 1.5rem;
+
+
+
