--- a/src/components/Component/Header.scss
+++ b/src/components/Component/Header.scss
@@ -1,25 +1,25 @@
-@use '../../styles/partials/variables' as *;
-@use '../../styles/partials/mixins' as *;
+@use "../../styles/partials/variables" as *;
+@use "../../styles/partials/mixins" as *;
 
 .header {
-    display: flex;
-    flex-direction: column;
-    margin: $mobile-between-component;
-    @include tablet {
-        flex-direction: row;
-        justify-content: space-between;
-        margin-right: 5.9375rem;
-        @include desktop {
-            justify-content: space-around;
-        }
+  display: flex;
+  flex-direction: column;
+  margin: $mobile-between-component;
+  @include tablet {
+    flex-direction: row;
+    justify-content: space-between;
+    margin-right: 5.9375rem;
+    @include desktop {
+      justify-content: space-around;
     }
+  }
 
-    &__nav {
-        @include tablet {
-        display: flex;
-        flex-direction: row;
+  &__nav {
+    @include tablet {
+      display: flex;
+      flex-direction: row;
     }
-    }
+  }
 
   &__logo {
     @include logo;
@@ -31,18 +31,16 @@
   }
   &__search-input {
     background-image: url(../../assets/images/icons/search.svg);
-    background-position: .625rem .625rem;
+    background-position: 0.625rem 0.625rem;
     background-repeat: no-repeat;
     padding-left: 2.1875rem;
     @include form-field;
     width: 12.5rem;
     margin-bottom: $mobile-between-component;
     @include tablet {
-        margin-right: 1.5rem;
-        width: 12.5rem;
-
+      margin-right: 1.5rem;
+      width: 12.5rem;
     }
-   
   }
 
   &__button {
@@ -54,34 +52,26 @@
     align-content: center;
     width: 100%;
 
-
-
     &-icon {
-        position: absolute;
-        left: 1.75rem;
-        @include tablet {
+      position: absolute;
+      left: 1.75rem;
+      @include tablet {
         position: relative;
         left: -1.75rem;
-        }
       }
+    }
   }
-
-  
-
 }
 
-
 .empty-avatar {
-    position: absolute;
-    right: 1rem;
-    top: 3.5rem;
-    @include tablet {
-        right: 2.25rem;
-        top: 1.2rem;
-        @include desktop {
-            right: 12.5rem;
-        }
+  position: absolute;
+  right: 1rem;
+  top: 3.5rem;
+  @include tablet {
+    right: 2.25rem;
+    top: 1.2rem;
+    @include desktop {
+      right: 12.5rem;
     }
-            
-      
+  }
 }
