--- a/src/components/Component/Header.scss
+++ b/src/components/Component/Header.scss
@@ -28,12 +28,18 @@
     width: 7.5rem;
     background: white;
     margin-bottom: $mobile-between-component;
+    @include tablet {
+      margin-left: $tablet-before-headline;
+    }
   }
+  
   &__search-input {
     background-image: url(../../assets/images/icons/search.svg);
     background-position: 0.625rem 0.625rem;
     background-repeat: no-repeat;
+    background-color: $form-field-background;
     padding-left: 2.1875rem;
+    border-color: $form-field-outline;
     @include form-field;
     width: 12.5rem;
     margin-bottom: $mobile-between-component;
@@ -69,7 +75,7 @@
   top: 3.5rem;
   @include tablet {
     right: 2.25rem;
-    top: 1.2rem;
+    top: 1.3rem;
     @include desktop {
       right: 12.5rem;
     }
