--- a/src/styles/partials/_typography.scss
+++ b/src/styles/partials/_typography.scss
@@ -1,7 +1,7 @@
 $font-local: "Avenir Next LT Pro", Helvetica, sans-serif;
 
 @font-face {
-  font-family: $font-local;
+  font-family: Avenir Next LT Pro;
   src: url("/assets/fonts/AvenirNextLTPro-Regular.otf") format("opentype"),
     url("/assets/fonts/alternative-files/AvenirNextLTPro.ttf")
       format("truetype");
@@ -10,7 +10,7 @@ $font-local: "Avenir Next LT Pro", Helvetica, sans-serif;
 }
 
 @font-face {
-  font-family: $font-local;
+  font-family: Avenir Next LT Pro;
   src: url("/assets/fonts/AvenirNextLTPro-Demi.otf") format("opentype"),
     url("/assets/fonts/alternative-files/AvenirNextLTProDemi.ttf")
       format("truetype");
@@ -19,7 +19,7 @@ $font-local: "Avenir Next LT Pro", Helvetica, sans-serif;
 }
 
 @font-face {
-  font-family: $font-local;
+  font-family: Avenir Next LT Pro;
   src: url("/assets/fonts/AvenirNextLTPro-Bold.otf") format("opentype"),
     url("/assets/fonts/alternative-files/AvenirNextLTProBold.ttf")
       format("truetype");
