--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -36,7 +36,7 @@ $tablet-before-headline: 2.25rem;
 $tablet-after-headline: 1.5rem;
 $tablet-between-component: 1.5rem;
 
-$border-divider: .0625rem solid $form-field-outline;
+$border-divider: 1px solid $form-field-outline;
 
 
 
