--- a/src/components/UploadVideo/UploadVideo.scss
+++ b/src/components/UploadVideo/UploadVideo.scss
@@ -1,14 +1,46 @@
 @use "../../styles/partials/variables" as *;
 @use "../../styles/partials/mixins" as *;
 
+// * {
+//   border: 2px solid fuchsia ;
+// }
+
 .upload {
-  display: flex;
-  flex-direction: column;
   border-top: $border-divider;
   margin: $mobile-between-component;
   @include tablet {
     margin-left: 2.25rem;
     margin-right: 2.25rem;
+  }
+  @include desktop {
+    margin-left: 8.125rem;
+    margin-right: 8.125rem;
+  }
+
+  &__container {
+    @include desktop {
+    display: flex;
+  }
+  }
+
+  &__container-left {
+    display: flex;
+    flex-direction: column;
+    @include desktop {
+      width: 38%;
+    }
+  }
+  &__container-right {
+    @include desktop {
+      width: 75%;
+    }
+  }
+
+  &__title {
+    display: block;
+    border-bottom: $border-divider;
+    padding-bottom: 2rem;
+    display: grid;
   }
 
   &__image {
@@ -17,6 +49,9 @@
       width: 50%;
       object-fit: cover;
       border-radius: 0.25rem;
+    }
+    @include desktop {
+      width: 20rem;
     }
   }
 
@@ -33,7 +68,7 @@
     border: $border-divider;
     padding-left: 1rem;
     @include tablet {
-      width: 100%;
+      width: auto;
     }
   }
 
@@ -47,8 +82,21 @@
     padding-bottom: 3rem;
     margin-bottom: 1.5rem;
     @include tablet {
-      width: 100%;
+      width: auto;
     }
+    @include desktop {
+      padding-bottom: 4.8rem;
+    }
+  }
+
+  &__button-group {
+    @include tablet {
+      display: flex;
+      flex-direction: row-reverse;
+      border-top: $border-divider;
+      padding-top: 1rem;
+    }
+  
   }
 
   &__button-publish {
@@ -66,6 +114,7 @@
     left: 1.75rem;
     @include tablet {
       position: relative;
+      left: -1rem;
     }
   }
 
@@ -77,10 +126,15 @@
     width: 100%;
     height: 2.5rem;
     margin-top: 1rem;
+    @include tablet {
+      height: 2.5rem;
+      width: 9.375rem;
+      position: relative;
+      top: -1.3rem;
+    }
   }
 }
 
 label {
   margin: 1rem 0 0;
-
 }
