--- a/src/styles/partials/_globals.scss
+++ b/src/styles/partials/_globals.scss
@@ -9,4 +9,9 @@ body {
     background: $background-color;
   }
 
+  a {
+    text-decoration: none; 
+    color: $primary-text-color;
+  }
+
   //links - text decoration none, searches, buttons, list items (removes styles)
