--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -52,9 +52,11 @@
       width: 12.5rem;
       height: 2.25rem;
     }
+  
   }
-
+ 
   &__button {
+    box-sizing: border-box;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -62,7 +64,7 @@
     border: none;
     align-content: center;
     width: 100%;
-
+    
     &-icon {
       position: absolute;
       left: 1.75rem;
