added main tag to homepage for styling; styled homepage to better resemble mockups for desktop breakpoint

--- a/src/components/VideoNav/VideoNav.scss
+++ b/src/components/VideoNav/VideoNav.scss
@@ -7,6 +7,9 @@
   @include tablet {
     flex-direction: column;
     border-top: $border-divider;
+    @include desktop {
+      width: 73%;
+    }
   }
 
   &__container {
@@ -27,6 +30,7 @@
     width: 6.25rem;
     height: 3.75rem;
     margin-left: $mobile-between-component;
+    margin-bottom: 1rem;
   }
 
   &__title {
@@ -45,6 +49,6 @@
   &__right {
     flex: 1;
     margin-right: $mobile-between-component;
+    margin-bottom: 1rem;
   }
 }
-
