--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -10,9 +10,12 @@
 .layout-main {
   @include desktop {
     flex: 1;
-    margin-right: 1rem;
+    // margin-right: 1rem;
     width: 35%;
     border-right: $border-divider;
+    // margin-left: 5rem;
+    // margin-bottom: 4rem;
+    margin: 0 1rem 4rem 5rem;
   }
 }
 
